# zarchive-rs

./: .gitignore  Cargo.toml  README.md  build.rs
.github/: push.yml
.github/workflows/: push.yml
include/: sha_256.c
include/zarchive/: zarchivereader.h  zarchivewriter.h
src/: lib.rs  reader.rs  writer.rs  zarchivereader.cpp  zarchivewriter.cpp
