[package]
name = "zarchive"
description = "Simple Rust bindings to Exzap's ZArchive library"
authors = ["Caleb Smith <c.smith@tuta.io>"]
version = "0.2.0"
edition = "2021"
readme = "README.md"
license-file = "LICENSE.md"
repository = "https://github.com/NiceneNerd/zarchive-rs"
keywords = ["archive", "file", "ffi", "bindings", "gamedev"]
exclude = ["/test", "/.github"]

[dependencies]
cxx = "1.0.69"
thiserror = "1"
tinyvec = { version = "1.6", features = ["alloc"] }
zstd-sys = "2.0"

[dev-dependencies]
tempfile = "3.3"
rayon = "1.6"

[build-dependencies]
cxx-build = "1.0.69"
